2005-02-21 Ian Rutt
 * Removed redundant argument from calcacab call in GLINT
 * Fixed lapse-rate adjustment problem in GLINT
 * Removed scaling on output of precip field in GLINT

2005-02-18 Ian Rutt
 * Added fix_acab call to glint_timestep.f90
 * Converted precip to m in glint_timestep.f90

2005-02-17 Ian Rutt
 * Tidied up GLINT pdd scheme and added config file handling
 * Major pruning of redundant forcing code in GLINT, and general
   reorganisation. Not fully functional yet.
 * Began bugfixing on GLINT
 * Fixed problem with accessor functions - get_nsn was returning ewn!
	
2005-02-16 Ian Rutt
 * First stage of making sure GLINT does what it should. Build
   successfully, but as yet untested.

2005-02-16 Magnus Hagdorn
 * glide.f90: load glide_io module into glide module name space
 * glide_types.f90: added some static accessor functions
 * ncdf_template.f90.in: add autogenerate accessors
 * generate_ncvars.py: generate accessor functions

2005-02-16 Magnus Hagdorn
 * configure.in: fixed bug where --enable-doc and --enable-profile were mixed
   up
 * glide_vars.def: load ubas and vbas

2005-02-15 Magnus Hagdorn
 * configure.in: always check for programs required to built doc
 * installation.tex: updated do to reflect new built system
 * glide.dia: updated diagram to include the third part of the time step
 * varlist.tex: hooked up autogenerated variable lists
 * user_doc.tex, nc_conf.tex: removed old documentation

2005-02-15 Magnus Hagdorn
 * bootstrap: require version 1.9 of automake
 * configure.in and various Makefile.am: make doc built optional
	
2005-02-10 Magnus Hagdorn
 * merged in autotools

2005-01-10 Ian Rutt
 * Merge part 3 - fixed glint build, under windows and Linux
 * Removed redundant files
 * renamed routing code in the glint series

2005-02-10 Magnus Hagdorn
 * merged documentation

2005-02-10 Ian Rutt
 * Merge part 2 - partial fixing of GLINT so it compiles under Windows. Linux build
   not fixed yet. Redundant files not removed either.
